--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
+    "date-fns": "^3.3.1",
     "firebase": "^9.17.1",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
